# The-coversion-engine

./: .env.example  .gitignore  DIRECTORY_MAP.md  HANDOFF_NOTES.md  README.md  SETUP.md  pyproject.toml  requirements.txt  smoke_langfuse.py  test.py  test_ai_maturity.py  test_competitor_gap.py  test_sms.py
agent/: __init__.py  channel_handoff.py  config.py  main.py  orchestrator.py  routing.py
agent/evidence/: pipeline.py
agent/handlers/: email.py  sms.py
calendars/: calcom.py  webhook.py
config/: common.yaml
crm/: hubspot_mcp.py  mappers.py  webhook.py
deliverables/: baseline.md  competitor_gap_brief.md  e2e_synthetic_thread.json  e2e_synthetic_thread.md  enrichment_signal_artifact.json  latency_sample.json  latency_sample.md  rubric_assessment.md  signal_enrichment_pipeline.md
docs/: architecture.md  day0_preflight.md  interim_report.md  method.md
enrichment/: confidence.py  merge_pipeline.py  scoring.py
evidence/: build_evidence_graph.py  claim_registry.yaml
integrations/: sms_client.py
probes/: probe_library.py  target_failure_mode.yaml
scripts/: bootstrap.ps1  build_latency_sample.py  generate_interim_pdf.py  run_local.ps1  smoke_test.ps1
tests/: test_ai_maturity_system.py  test_calcom_hubspot_sync.py  test_channel_handoff.py  test_competitor_gap_system.py  test_email_adapters.py  test_email_handler.py  test_email_webhook.py  test_enrichment_resilience.py  test_fusion_agent.py  test_hiring_signals_pipeline.py  test_hubspot_enriched_write.py  test_merge_pipeline.py  test_orchestrator.py  test_sms_handler.py  test_sms_routing.py
(+94 files in other folders)
